fixed navigation on tablet

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -23,12 +23,6 @@
     position: relative;
     height: inherit;
 
-    font-size: 13px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    opacity: 0.8;
-
     @include onDesktop {
       &::after {
         content: "";
@@ -55,7 +49,12 @@
     align-items: center;
     height: inherit;
 
+    font-size: 11px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    opacity: 0.8;
+
     color: $color-main;
-    opacity: 0.9;
   }
 }
