--- a/src/sassStyles/_reset.scss
+++ b/src/sassStyles/_reset.scss
@@ -7,7 +7,8 @@
 }
 
 body,
-ul {
+ul,
+button {
   margin: 0;
   padding: 0;
 }
